--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1661,107 +1661,107 @@ stories:
   domain: http://www.brownfieldonline.com/
   link: https://www.brownfieldonline.com/article/truck-makes-wrong-turn
 images:
-- name: nyc-flag-nycflag-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
-- name: containership-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
-- name: downtown-los-angeles-downtown-la-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-dali.JPG
-- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
-- name: aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-132-800-500-0-max-0--5--1.jpg
-- name: art-museum-art-museum-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
-- name: store-on-corner-oldcabin-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-pablo-blue.jpg
-- name: store-on-corner-store-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sunday.jpg
-- name: bf-skinner-fishing-ship-in-docks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fishing-ship-in-docks.jpg
-- name: liberty-back-statue-liberty-back-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dali-two.jpg
-- name: bordercrossing-bordercrossing-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-mucha-mult.jpg
-- name: art-museum-art-museum-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
-- name: ellis-island-ellis-island-room-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-pablo-blue.jpg
-- name: abandonedbuildings_spagetti_accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_spagetti_accident.jpg
-- name: white-house-lawn-white-house-window-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-umberto-bocc.jpg
-- name: downtheline-downtheline-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-internet-numbers.jpg
-- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-- name: machine-road-machine-road-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
-- name: la-muse-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gypsy-house-with-pen.jpg
-- name: mosaic-face-mosaic-face-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit-2.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: gypsymosaic-gypsy-eyes-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-dali.jpg
-- name: mediterranean-mediterranean-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-blocks.jpg
-- name: locked-up-steam-lock-up-steam-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-hot-spicy.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-- name: old-granary-field-granaryfield-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-alberto-giacometti.jpg
-- name: machine-road-machine-road-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-wols.jpg
-- name: supreme-court-supremecourt-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-brush.jpg
-- name: docks-docks-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-graham-sutherland.jpg
-- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-- name: catacombs-catacombs-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-dali.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
-- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
-- name: old-granary-field-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
-- name: old-gas-pumps-oldgaspumps-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-pablo-blue.jpg
-- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: oldhouse-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-soul.jpg
-- name: stalin-time-piano-in-street-good.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-piano-in-street-good.jpg
-- name: oldcabin-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
-- name: carry-load-carryload-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-post-modern.jpg
-- name: subway-subway-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-light-dali.jpg
-- name: mediterranean-mediterranean-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
-- name: status-berlin-status-berlin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit.jpg
-- name: castle-wall-DSC-0067-blue-brush.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-brush.JPG
-- name: white-house-lawn-white-house-lawn-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-mucha-mult.jpg
-- name: old-door-lock-old-door-lock-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-collage.jpg
-- name: carry-load-carryload-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-circuit.jpg
-- name: rain-princess-butterfly-on-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-butterfly-on-flower.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+- name: containership-containership-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colorful-dream.jpg
+- name: old-gas-pumps-oldgaspumps-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-matrix.jpg
+- name: wave-DSC_0291.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
+- name: nazi-invasion-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
+- name: aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+- name: birdhouse-birdhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-collage.jpg
+- name: bluelake-far-away-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-38-67.jpg
+- name: birdhouse-birdhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colorful-dream.jpg
+- name: bf-skinner-crow-stkump-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-crow-stkump-waterfront.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-3.jpg
+- name: rockingchair-rockingchair-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-storm.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-storm.jpg
+- name: death-valley-death-valley-national-park-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-marcel-duchamp.jpg
+- name: old-cabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
+- name: amusement-park-amusement-park-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
+- name: bf-skinner-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
+- name: fence-fence-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-pablo-blue.jpg
+- name: oldhousecars-house-old-cars-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
+- name: yosemite-yosemite-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sunday.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+- name: gypsymosaic-gypsy-eyes-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-rainbow-festival.jpg
+- name: abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-emily-carr.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
+- name: oldcabin-store.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
+- name: sand-hand-sand-hand-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
+- name: oldtrain-oldtrain-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-mucha-mult.jpg
+- name: dragon-desert-desert-dragon-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-alberto-giacometti.jpg
+- name: miamibeach-miamibeach-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
+- name: aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+- name: hollywood-building-hollywood-building-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-really-hot.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+- name: berlinwall-DSC-0084-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-kand-two.jpg
+- name: powerlines-power-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-matrix.jpg
+- name: machine-road-machine-road-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-pablo-blue.jpg
+- name: server-cloud-server-racks-door-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-attack-planes.jpg
+- name: status-berlin-status-berlin-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-nazi-poster.jpg
+- name: downtown-trucksilo-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-collage.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
+- name: castle-wall-DSC-0067-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smoking-cigarette.JPG
+- name: downtown-los-angeles-downtown-la-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-rain.JPG
+- name: old-door-lock-old-door-lock-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-color.jpg
+- name: amusement-park-amusement-park-2-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-plentiful.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+- name: rockingchair-rockingchair-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-constitution.jpg
+- name: stalin-time-san-francisco-from-salesforce-west.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-from-salesforce-west.jpg
+- name: copper-circuit-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-new-york-city-skyline_36655833162_o.jpg
 ---
 WDAY's Gallery Of Weather Photos From Around Our Region.&nbsp;Iola, Ellsworth Get Incubator Grants.&nbsp;At Each End Of Pacific, Skepticism Over China Farm Purchases.&nbsp;Massac Youth Basketball Plays Round Robin Tournament.&nbsp;In 2019, We Ate.&nbsp;Sudan's Christians Enjoy Holiday Amid Hope For New Freedoms.&nbsp;Vernon Pizza House Has Proud History Of Consistency And Quality.&nbsp;Yellowstone Airport On Verge Of Setting Passenger Record.&nbsp;
